@@ -237,8 +237,9 @@ I:8:0:2
 W:0:100:5:50000
 S:0:0:0:0:3:0
 P:0:2d8:0:0:0
-F:IGNORE_FIRE | RES_FIRE20 | LIGHT3 | 
-F:RES_ACID10 | ACTIVATE
+F:IGNORE_FIRE | LIGHT3 | ACTIVATE
+R:FIRE:20
+R:ACID:10
 D:Inside a thin sheet of glass, a burning furnace glows, although
 D:it's heat does not touch your skin.  The light it emits is strong,
 D:but it does not blind you.
@@ -249,7 +250,8 @@ I:8:1:0
 W:0:100:5:50000
 S:0:0:0:0:1:0
 P:0:2d4:0:0:0
-F:IGNORE_FIRE | RES_FIRE10 | LIGHT2
+F:IGNORE_FIRE | LIGHT2
+R:FIRE:10
 D:This orb is a globe of lava enclosed in a magical sphere, made
 D: to convert it's heat to light.
 
@@ -259,8 +261,9 @@ I:8:2:0
 W:0:100:5:50000
 S:0:0:0:3:0:0
 P:0:2d8:0:0:0
-F:IGNORE_COLD | RES_COLD20 | LIGHT3 |
+F:IGNORE_COLD | LIGHT3 |
 F:FREE_ACT | ACTIVATE
+R:COLD:20
 D:A frozen ball, full of images of frozen lakes, cold winters,
 D: freezing temperatures.  Although it gives out no chill, each
 D: time you look into it a shiver goes up your spine. It emits
@@ -272,7 +275,8 @@ I:8:3:0
 W:0:100:5:50000
 S:0:0:0:1:0:0
 P:0:2d4:0:0:0
-F:IGNORE_COLD | RES_COLD20 | LIGHT2
+F:IGNORE_COLD LIGHT2
+R:COLD:20
 D:A ball of carved ice that glows a dark blue, it reminds you
 D: of long gone cold winters.  It glows with a deep blue.
 
@@ -794,7 +798,8 @@ I:23:30:0
 W:70:0:180:4000
 A:70/5
 P:0:5d5:0:0:0
-F:RES_CHAOS | BRAND_CHAOS | SHOW_MODS
+F:BRAND_CHAOS | SHOW_MODS
+R:CHAOS:15
 
 ### Belts ###
 
@@ -1155,8 +1160,8 @@ I:38:1:0
 W:50:0:200:40000
 A:50/8
 P:30:2d4:-2:0:10
-F:RES_ACID |
 F:ACTIVATE | IGNORE_ACID | IGNORE_ELEC | IGNORE_FIRE | IGNORE_COLD
+R:ACID:30
 
 N:136:Blue Dragon Scale Mail~
 G:[:b
@@ -1164,8 +1169,8 @@ I:38:2:0
 W:50:0:200:40000
 A:50/8
 P:30:2d4:-2:0:10
-F:RES_ELEC |
 F:ACTIVATE | IGNORE_ACID | IGNORE_ELEC | IGNORE_FIRE | IGNORE_COLD
+R:ELEC:30
 
 N:137:White Dragon Scale Mail~
 G:[:w
@@ -1173,8 +1178,8 @@ I:38:3:0
 W:50:0:200:40000
 A:50/8
 P:30:2d4:-2:0:10
-F:RES_COLD |
 F:ACTIVATE | IGNORE_ACID | IGNORE_ELEC | IGNORE_FIRE | IGNORE_COLD
+R:COLD:30
 
 N:138:Red Dragon Scale Mail~
 G:[:r
@@ -1182,8 +1187,8 @@ I:38:4:0
 W:50:0:200:40000
 A:50/8
 P:30:2d4:-2:0:10
-F:RES_FIRE |
 F:ACTIVATE | IGNORE_ACID | IGNORE_ELEC | IGNORE_FIRE | IGNORE_COLD
+R:FIRE:30
 
 N:139:Green Dragon Scale Mail~
 G:[:g
@@ -1191,8 +1196,8 @@ I:38:5:0
 W:60:0:200:60000
 A:60/8
 P:30:2d4:-2:0:10
-F:RES_POIS |
 F:ACTIVATE | IGNORE_ACID | IGNORE_ELEC | IGNORE_FIRE | IGNORE_COLD
+R:POIS:30
 
 N:140:Multi-Hued Dragon Scale Mail~
 G:[:v
@@ -1200,8 +1205,12 @@ I:38:6:0
 W:90:0:200:150000
 A:90/32
 P:30:2d4:-2:0:10
-F:RES_ACID | RES_ELEC | RES_FIRE | RES_COLD | RES_POIS |
 F:ACTIVATE | IGNORE_ACID | IGNORE_ELEC | IGNORE_FIRE | IGNORE_COLD
+R:ACID:20
+R:ELEC:20
+R:FIRE:20
+R:COLD:20
+R:POIS:20
 
 N:141:Pseudo-Dragon Scale Mail~
 G:[:o
@@ -1209,8 +1218,8 @@ I:38:10:0
 W:65:0:200:60000
 A:65/16
 P:30:2d4:-2:0:10
-F:RES_LIGHT | RES_DARK |
 F:ACTIVATE | IGNORE_ACID | IGNORE_ELEC | IGNORE_FIRE | IGNORE_COLD
+R:DARK:25
 
 N:142:Law Dragon Scale Mail~
 G:[:B
@@ -1218,8 +1227,9 @@ I:38:12:0
 W:80:0:200:80000
 A:80/16
 P:30:2d4:-2:0:10
-F:RES_SOUND | RES_SHARDS |
 F:ACTIVATE | IGNORE_ACID | IGNORE_ELEC | IGNORE_FIRE | IGNORE_COLD
+R:SOUND:25
+R:SHARDS:25
 
 N:143:Bronze Dragon Scale Mail~
 G:[:U
@@ -1236,8 +1246,8 @@ I:38:16:0
 W:50:0:200:40000
 A:50/8
 P:30:2d4:-2:0:10
-F:RES_SOUND |
 F:ACTIVATE | IGNORE_ACID | IGNORE_ELEC | IGNORE_FIRE | IGNORE_COLD
+R:RES_SOUND:25
 
 N:145:Chaos Dragon Scale Mail~
 G:[:v
@@ -1245,8 +1255,9 @@ I:38:18:0
 W:80:0:200:80000
 A:80/16
 P:30:2d4:-2:0:10
-F:RES_CHAOS | NO_DISENCHANT |
+F:NO_DISENCHANT |
 F:ACTIVATE | IGNORE_ACID | IGNORE_ELEC | IGNORE_FIRE | IGNORE_COLD
+R:CHAOS:30
 
 N:146:Balance Dragon Scale Mail~
 G:[:v
@@ -1254,8 +1265,10 @@ I:38:20:0
 W:95:0:200:100000
 A:95/32
 P:30:2d4:-2:0:10
-F:RES_SOUND | RES_SHARDS | RES_CHAOS | NO_DISENCHANT |
-F:ACTIVATE | IGNORE_ACID | IGNORE_ELEC | IGNORE_FIRE | IGNORE_COLD
+R:SOUND:20
+R:SHARDS:20
+R:CHAOS:20
+F:NO_DISENCHANT | ACTIVATE | IGNORE_ACID | IGNORE_ELEC | IGNORE_FIRE | IGNORE_COLD
 
 N:147:Power Dragon Scale Mail~
 G:[:v
@@ -1263,10 +1276,19 @@ I:38:30:0
 W:100:0:200:300000
 A:100/64
 P:40:2d4:-3:0:15
-F:RES_ACID | RES_FIRE | RES_COLD | RES_ELEC | RES_POIS |
-F:RES_CONFU | NO_DISENCHANT | RES_SOUND | RES_SHARDS | NO_BLIND | 
-F:RES_LIGHT | RES_DARK | RES_NEXUS | RES_NETHER | RES_CHAOS |
+F:RES_CONFU | NO_DISENCHANT | NO_BLIND |
 F:ACTIVATE | IGNORE_ACID | IGNORE_ELEC | IGNORE_FIRE | IGNORE_COLD
+R:ACID:25
+R:FIRE:25
+R:COLD:25
+R:ELEC:25
+R:POIS:25
+R:SOUND:20
+R:SHARDS:20
+R:DARK:20
+R:NEXUS:20
+R:NETHER:20
+R:CHAOS:20
 
 ### Light Sources ###
 
@@ -1321,7 +1343,8 @@ G:":d
 I:40:4:0
 W:10:0:3:300
 A:10/1
-F:RES_ACID | IGNORE_ACID | EASY_KNOW
+F:IGNORE_ACID | EASY_KNOW
+R:ACID:15
 
 N:155:Searching
 G:":d
@@ -1377,7 +1400,10 @@ G:":d
 I:40:14:0
 W:60:0:3:20000
 A:60/8
-F:RES_FIRE | RES_ACID | RES_ELEC | RES_COLD | 
+R:FIRE:25
+R:ACID:25
+R:ELEC:25
+R:COLD:25
 F:IGNORE_ACID | IGNORE_ELEC | IGNORE_FIRE | IGNORE_COLD
 
 N:162:Regeneration
@@ -1393,8 +1419,9 @@ I:40:18:0
 W:70:0:3:30000
 A:70/8
 F:WIS | CHR | SUST_WIS | SUST_CHR | LIGHT1 | 
-F:RES_DARK | RES_LIGHT | RES_FIRE | HOLD_LIFE | 
-F:HIDE_TYPE
+F:HOLD_LIFE | HIDE_TYPE
+R:DARK:25
+R:FIRE:20
 
 N:164:Weaponmastery
 G:":d
@@ -1410,8 +1437,9 @@ G:":d
 I:40:20:1
 W:70:0:3:30000
 A:70/8
-F:DEX | SUST_DEX | STEALTH | SPEED | SEARCH | INFRA | 
-F:RES_NEXUS | RES_POIS | HIDE_TYPE
+F:DEX | SUST_DEX | STEALTH | SPEED | SEARCH | INFRA | HIDE_TYPE
+R:NEXUS:20
+R:POIS:20
 
 N:166:Infravision
 G:":d
@@ -1425,7 +1453,8 @@ G:":d
 I:40:22:0
 W:10:0:3:300
 A:10/1
-F:RES_ELEC | IGNORE_ELEC | EASY_KNOW
+F:IGNORE_ELEC | EASY_KNOW
+R:ELEC:20
 
 ### Rings ###
 
@@ -1448,7 +1477,8 @@ G:=:d
 I:45:2:0
 W:50:0:2:5000
 A:50/2
-F:RES_ELEC | IGNORE_ELEC | ACTIVATE
+F:IGNORE_ELEC | ACTIVATE
+R:ELEC:20
 
 N:171:Teleportation
 G:=:d
@@ -1476,14 +1506,16 @@ G:=:d
 I:45:8:0
 W:10:0:2:250
 A:10/1
-F:RES_FIRE | IGNORE_FIRE | EASY_KNOW
+F:IGNORE_FIRE | EASY_KNOW
+R:FIRE:20
 
 N:175:Resist Cold
 G:=:d
 I:45:9:0
 W:10:0:2:250
 A:10/1
-F:RES_COLD | IGNORE_COLD | EASY_KNOW
+F:IGNORE_COLD | EASY_KNOW
+R:COLD:20
 
 N:176:Sustain Strength
 G:=:d
@@ -1539,8 +1571,8 @@ I:45:17:0
 W:45:0:2:4000
 A:45/2
 P:0:0d0:0:0:15
-F:RES_ACID15 | IGNORE_ACID |
-F:ACTIVATE
+F:IGNORE_ACID | ACTIVATE
+R:ACID:15
 
 N:184:Flames
 G:=:d
@@ -1548,8 +1580,8 @@ I:45:18:0
 W:45:0:2:4000
 A:45/2
 P:0:0d0:0:0:15
-F:RES_FIRE15 | IGNORE_FIRE |
-F:ACTIVATE
+F:IGNORE_FIRE | ACTIVATE
+R:FIRE:15
 
 N:185:Ice
 G:=:d
@@ -1557,15 +1589,16 @@ I:45:19:0
 W:45:0:2:4000
 A:45/2
 P:0:0d0:0:0:15
-F:RES_COLD15 | IGNORE_COLD |
-F:ACTIVATE
+F:IGNORE_COLD | ACTIVATE
+R:COLD:15
 
 N:186:Resist Poison
 G:=:d
 I:45:20:0
 W:40:0:2:16000
 A:40/2
-F:RES_POIS | EASY_KNOW
+F:EASY_KNOW
+R:POIS:15
 
 N:187:Free Action
 G:=:d
@@ -1647,7 +1680,10 @@ G:=:d
 I:45:38:25000
 W:60:0:2:0
 A:60/4
-F:RES_ACID15 | RES_COLD15 | RES_FIRE15 | RES_ELEC15
+R:ACID:15
+R:COLD:15
+R:FIRE:15
+R:ELEC:15
 
 N:200:Mastery
 G:=:d
@@ -1670,8 +1706,7 @@ I:45:42:0
 S:0:4:0:3:0:4
 W:60:0:2:15000
 A:60/2
-F:SEE_INVIS | RES_LIGHT |
-F:IGNORE_ACID | IGNORE_ELEC | IGNORE_FIRE | IGNORE_COLD
+F:SEE_INVIS | IGNORE_ACID | IGNORE_ELEC | IGNORE_FIRE | IGNORE_COLD
 
 N:203:Dwarrowkind
 G:=:d
